--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9868,7 +9868,7 @@ a.button {
   clear: both;
   display: inline-block;
   width: 100%;
-  height: 150px;
+  height: 60px;
   background: #1B3255;
   background: -webkit-linear-gradient(left, #1B3255 0%, #40A6BF 50%, #1B3255 100%);
   background: -moz-linear-gradient(left, #1B3255 0%, #40A6BF 50%, #1B3255 100%);
@@ -9956,10 +9956,21 @@ a.button {
       color: #fff; }
 
 .has-header {
-  top: 150px; }
+  top: 60px; }
 
 .has-tabs {
   bottom: 60px; }
+
+.platform-ios .has-header {
+  top: 100px; }
+
+.platform-ios .bar.bar-stable {
+  height: 100px; }
+  .platform-ios .bar.bar-stable .title {
+    height: 50px;
+    line-height: 50px; }
+  .platform-ios .bar.bar-stable .buttons-right .icon {
+    margin: 0 10px 0 0; }
 
 /**
  * @file
